# awsblogs-mcp

./: .gitignore  Dockerfile.http  Dockerfile.sse  README.cz.md  README.md  docker-compose.yml  main_http.py  main_sse.py  pyproject.toml
.github/workflows/: docker-build.yml
assets/: n8n-workflow.json
src/awsblogs_mcp_server/: __init__.py  data_processor.py  server_http.py  server_sse.py
