[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awsblogs-mcp"
version = "1.0.0"
description = "AWS Blogs MCP Server for working with AWS Blog and News using api.aws-news.com"
authors = [
    {name = "Miroslav Dvořák", email = "mirecekd@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=0.2.0",
    "aiohttp>=3.8.0",
    "python-dateutil>=2.8.0",
    "beautifulsoup4>=4.12.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
awsblogs-mcp-server = "awsblogs_mcp_server.server_http:main"

[project.urls]
Homepage = "https://github.com/mirecekd/awsblogs-mcp"
Repository = "https://github.com/mirecekd/awsblogs-mcp"
Issues = "https://github.com/mirecekd/awsblogs-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/awsblogs_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
